# teeb

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  teeb.py
src/teeb/: __main__.py  action.py  cli.py  cueparser.py  data_type.py  default.py  find.py  prompt.py  suggest.py
teeb/: ansii.py  cueparser.py  teeb.py
tests/: conftest.py
tests/files/: ASCII_text.cue  ASCII_text_with_CRLF_line_terminators.cue  ISO-8859_text_with_CRLF_line_terminators.cue  Little-endian_UTF-16_Unicode_text_with_CRLF_line_terminators.cue  Non-ISO_extended-ASCII_text_with_CRLF.cue  UTF-8_Unicode_text.cue  UTF-8_Unicode_text_with_CRLF_line_terminators.cue  UTF-8_Unicode_with_BOM_text_with_CRLF_line_terminators.cue
tests/unit/: test_cli.py  test_cueparser.py  test_find.py  test_suggest.py
