[metadata]
name = Teeb
version = attr: teeb.__version__
url = https://github.com/kowalcj0/teeb
project_urls =
    Source Code = https://github.com/kowalcj0/teeb
    Issue Tracker = https://github.com/kowalcj0/teeb/issues/
license = BSD-3-Clause
author = Janusz Kowalczyk
maintainer = Janusz Kowalczyk
description = A pre-tagging music organiser.
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Audio hobbysts
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: Audio

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    teeb = teeb.cli:main


[tool:pytest]
testpaths = tests
filterwarnings =
    error


[coverage:run]
branch = True
source =
    teeb
    tests

[coverage:paths]
source =
    src


[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # import at top, too many circular import fixes
    E402
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
    # misspelt word
    SC200
# up to 88 allowed by bugbear B950
max-line-length = 88


[isort]
# Black compatible isort settings
# See https://black.readthedocs.io/en/stable/compatible_configs.html#isort
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0  # wrap imports that surpass the line_length limit.
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
combine_as_imports=True
no_lines_before=LOCALFOLDER
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_third_party=behave,bs4,datadiff,django,docopt,envparse,jsonschema,langdetect,locust,lxml,pages,pdfminer,pytest,requests,rest_framework,retrying,scrapy,selenium,setuptools,steps,termcolor,urllib3,utils,xmltodict
known_first_party=


[tox:tox]
envlist =
    py{39,38,37}
skip_missing_interpreters = true

[testenv]
deps =
    -r requirements_dev.txt
setenv =
    COVERAGE_FILE = {toxinidir}/.coverage.{envname}
commands = pytest --cov=teeb --cov-append --tb=short --basetemp={envtmpdir} {posargs:tests}
